hphp/test/zend/bad/ext/gd/tests/bug37360.php
<?php
$im = imagecreatefromgif(dirname(__FILE__) . '/bug37360.gif');
var_dump($im);
?>